# population-simulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  run_par_benchmark.sh
experiments/: Benchmarks.ipynb
experiments/data/: threaded_benchmark_states.csv.bz2  threaded_benchmark_threads1.csv.bz2  threaded_benchmark_threads40.csv.bz2  threaded_benchmark_threads80.csv.bz2
include/pps/: AsyncBatchSimulator.hpp  AsyncDistributionSimulator.hpp  AsyncPopulationSimulator.hpp  AsyncRandomEngine.hpp  CollisionDistribution.hpp  EpochLengthController.hpp  FairCoin.hpp  Protocols.hpp  RoundBasedMonitor.hpp  ScopedTimer.h  WeightedUrn.hpp
include/protocols/: clock_protocol.hpp  increment_one_protocol.hpp  leader_election_protocol.hpp  majority_protocol.hpp  random_protocol.hpp
include/sampling/: hypergeometric_distribution.hpp
include/urns/: AliasUrnSimple.hpp  LinearUrn.hpp  Traits.hpp  TreeUrn.hpp
source/: CMakeLists.txt  main_benchmark.cpp  main_clock.cpp  main_clock_find_gap.cpp  main_leader_election.cpp  main_majority.cpp
tests/: CMakeLists.txt  SimulatorNoLossesTest.cpp  UrnsTest.cpp
